--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "math-golang"]
 	path = math-golang
 	url = https://github.com/davidhalasz/math-golang.git
+[submodule "simple-ecommerce"]
+	path = simple-ecommerce
+	url = https://github.com/davidhalasz/simple-ecommerce.git
